--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,6 @@
 
 <!-- <app-metamask-error></app-metamask-error> -->
 <app-header></app-header>
-<div class="container"><router-outlet></router-outlet></div>
+<div class="container" >
+  <router-outlet></router-outlet>
+</div>
