--- a/src/app/inverstor/inverstor.component.css
+++ b/src/app/inverstor/inverstor.component.css
@@ -1,20 +1,11 @@
-th,td {
-    text-align:center;
- 
+th,td 
+{
+    text-align:center
 }
-.table-wrapper-2 {
+.table-wrapper-2 
+{
     display: block;
     max-height: 300px;
     overflow-y: auto;
     overflow-y:scroll;
 }
-th{
-    font-style: normal;
-    font-weight: bold;
-    background-color:grey;
-  
-}
-table{
-    border: 1px solid black;
-    
- }
