--- a/src/app/metamask-error/metamask-error.component.html
+++ b/src/app/metamask-error/metamask-error.component.html
@@ -3,9 +3,10 @@
 		<title>Ethereum Account Connectivity Error Page</title>
 	</head>
 	<body>
-		 <img src="./assets/metamask_logo.png"/> 
-		<!-- <center> -->
-			<p>
+		<br><br><br>
+		 <img class="center" src="./assets/metamask-fox-logo.png"/> 
+		
+			<p style="text-align:center">
 				<br>There was an error while fetching your account.
 				<br>Make sure your Ethereum client is configured correctly
 
@@ -14,6 +15,6 @@
 				<br>If you don't have MetaMask plugin install here: 
 				<br><a href ="https://metamask.io/ ">https://metamask.io/</a>
 			</p>
-		<!-- </center> -->
+	
 	</body>
 </html>
