--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,7 +5,7 @@
 #container 
 {
   color:#4ec7f3;
-  color:#00ae7b;
+  color:#ae0091;
   text-transform: uppercase;
   font-size:36px;
   font-weight:bold;
@@ -49,7 +49,7 @@ h1
 }
 #flip div:first-child div 
 {
-  background:#4ec7f3;
+  background:#594ef3;
 }
 #flip div:last-child div {
   background:#ff66ff;
@@ -74,3 +74,5 @@ p {
   color:#999;
   margin-top:200px;
 }
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box}
