--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
-
-
-<div class="container">
+<br><br><br>
+<div class="col-sm-9" id="container">
+<div class="container" style="border:1px solid #ccc;background:white">
+    
   <div id=container>
       Connect With LoanSecuritization...<i class="em em-grinning"></i>
       <div id=flip>
@@ -11,3 +12,4 @@
      Easier..!
   </div>
   </div>
+</div>
