--- a/src/app/inverstor/inverstor.component.html
+++ b/src/app/inverstor/inverstor.component.html
@@ -1,22 +1,23 @@
-<head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
+<br>
+<br>
+<br>
 <div classs="container">
   <div id="invester_register">
     <div class="container">
-        
-           <font > <button data-toggle="pill" href="#home3" style="color:black">Home</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <button data-toggle="pill" href="#menu2">Purchase Pack</button>
-          </font>
-          
-          <div class="tab-content">
-            <div id="home3" class="tab-pane fade in active">
-              <div class="col-sm-4" id="investor_detail">
-                  <div class="container">
-                    <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="color: #338ecf;">Investor  Details</h3></div> 
-                    <div class="table-wrapper-2">
-                      <table class="table table-responsive-md">
-                      <thead class="mdb-color lighten-4">
+        <!-- <ul class="nav nav-pills" style="background:white;">
+            <li class="active"><a data-toggle="pill" href="#home3">Home</a></li>
+            <li><a data-toggle="pill" href="#menu2">Purchase Pack</a></li>
+            <li><a data-toggle="pill" href="#menu3">Investor Pack Detail</a></li>
+          </ul> -->
+          &nbsp;
+          <!-- <div class="tab-content">
+            <div id="home3" class="tab-pane fade in active"> -->
+              
+                  <div class="container" style="background:white;height:200px;overflow-y:auto;">
+                      <div class="col-sm-12" id="investor_detail">
+                    <h3 style="color: #338ecf;text-align:center;">Investor  Details</h3>
+                                  <table class="table table-hover" id="invesdetai_table">
+                                      <thead>
                                         <tr>
                                           <th><h4 style="color: black;">Investor Address</h4></th>
                                           <th><h4 style="color: black;">Total Amount</h4></th>
@@ -33,10 +34,37 @@
                                       </tbody>
                                     </table>
                     </div>
-                    </div>
                 </div>  
-            </div>
-        <div id="menu2" class="tab-pane fade">
+            <!-- </div> -->
+        <!-- <div id="menu2" class="tab-pane fade">
+            <div class="row">
+                <div class="col-sm-8" id="spvdetail_hide1">
+                    <div class="container" style="background:white;height:250px;overflow-y:scroll;">
+                      <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h3 style="color: #338ecf;">SPV Details</h3></div> 
+                    <table class="table table-hover">
+                      <thead>
+                        <tr>
+                          <th><h4 style="color: black;">SPV Address</h4></th>
+                          <th><h4 style="color: black;">Total Amount</h4></th>
+                          <th><h4 style="color: black;">Total Loan</h4></th>
+                          <th><h4 style="color: black;">Available pack</h4></th>
+                        </tr>
+                      </thead>
+                      <tbody id="spv_list1">
+                        <tr *ngFor="let spv of spvdetails;">
+                          <td >{{spv.spvaddress}} </td>
+                          <td>{{spv.totalamount}}</td>
+                          <td>{{spv.totalloan}}</td>
+                          <td>{{spv.availablepack}}</td>
+                          <td><button class="btn btn-primary" (click)="choosespv(spv.spvaddress)">Buy</button></td>
+                      </tr>
+                      </tbody>
+                  </table>
+                  </div>
+                </div>
+            </div>  
+            <br>
+            <br>
             <div class="row">
                 <div class="form-group col-sm-4" id="purchase_pack">
                     <div class="container" style="background:white;height:200px;width:370px;">
@@ -47,37 +75,14 @@
                     <div id="status"></div>
                     </div>
                   </div>
-                <div class="col-sm-8" id="invester_pack_details">
-                    <div class="container" style="background:white;height:350px;width:900px;">
-                      <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="color: #338ecf;">Inverster Package Details</h3></div> 
-                      <div class="table-wrapper-2">
-                        <table class="table table-responsive-md">
-                        <thead class="mdb-color lighten-4">
-                          <tr>
-                            <th><h4 style="color: black;">Package</h4></th>
-                            <th><h4 style="color: black;">token value</h4></th>            
-                          </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let investorpackage of details1;">
-                                <td >{{investorpackage.investor_package}}</td>
-                                <td >{{investorpackage.token_value}} </td>
-                             </tr>
-        
-                        </tbody>
-                      </table>
-                      </div>
-                      </div>
-                  </div>  
                             </div>
                             &nbsp;
                             <div class="row">
-                                <div class="col-sm-4" id="spv_packdetail">
-                                    <div class="container" style="background:white;height:350px;width:370px;">
+                                <div class="col-sm-2" id="spv_packdetail">
+                                    <div class="container" style="background:white;height:250px;overflow-y:scroll;">
                                       <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h3 style="color: #338ecf;">SPV package details</h3></div> 
-                                      <div class="table-wrapper-2">
-                                        <table class="table table-responsive-md">
-                                        <thead class="mdb-color lighten-4">
+                                    <table class="table table-hover" id="invester_cls">
+                                        <thead>
                                           <tr>
                                             <th><h4 style="color: black;">Package</h4></th>
                                             <th><h4 style="color: black;">Token value</h4></th>
@@ -91,42 +96,34 @@
                                         </tbody>
                                       </table>
                                       </div>
-                                      </div>
                                   </div>  
-                                  <div class="col-sm-8" id="spvdetail_hide1">
-                                      <div class="container" style="background:white;height:350px;width:900px;">
-                                        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h3 style="color: #338ecf;">SPV Details</h3></div> 
-                                        <div class="table-wrapper-2">
-                                          <table class="table table-responsive-md">
-                                          <thead class="mdb-color lighten-4">
-                                          <tr>
-                                            <th><h4 style="color: black;">SPV Address</h4></th>
-                                            <th><h4 style="color: black;">Total Amount</h4></th>
-                                            <th><h4 style="color: black;">Total Loan</h4></th>
-                                            <th><h4 style="color: black;">Available pack</h4></th>
-                                          </tr>
-                                        </thead>
-                                        <tbody id="spv_list1">
-                                          <tr *ngFor="let spv of spvdetails;">
-                                            <td >{{spv.spvaddress}} </td>
-                                            <td>{{spv.totalamount}}</td>
-                                            <td>{{spv.totalloan}}</td>
-                                            <td>{{spv.availablepack}}</td>
-                                            <td><button class="btn btn-primary" (click)="choosespv(spv.spvaddress)">Buy</button></td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                    </div>
-                                    </div>
                                   </div>
-                            
-                              </div>  
+                                  
         </div>
+        <div id="menu3" class="tab-pane fade">
+          <div class="col-sm-2" id="invester_pack_details">
+            <div class="container" style="background:white;height:350px;overflow-y:scroll;">
+              <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="color: #338ecf;">Inverster Package Details</h3></div> 
+            <table class="table table-hover" id="inves_loan_table">
+                <thead>
+                  <tr>
+                    <th><h4 style="color: black;">Package</h4></th>
+                    <th><h4 style="color: black;">token value</h4></th>            
+                  </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let investorpackage of details1;">
+                        <td >{{investorpackage.investor_package}}</td>
+                        <td >{{investorpackage.token_value}} </td>
+                     </tr>
+
+                </tbody>
+              </table>
+              </div>
+          </div>  
+        </div> -->
        
       </div>
       </div>
   </div>
 
-
-
-</div>
