--- a/src/app/spv/spv.component.css
+++ b/src/app/spv/spv.component.css
@@ -1,6 +1,5 @@
 th,td {
-    text-align:center;
- 
+    text-align:center
 }
 .table-wrapper-2 {
     display: block;
@@ -10,11 +9,4 @@ th,td {
 }
 th{
     font-style: normal;
-    font-weight: bold;
-    background-color:grey;
-  
 }
-table{
-    border: 1px solid black;
-    
- }
