--- a/src/app/spvreg/spvreg.component.html
+++ b/src/app/spvreg/spvreg.component.html
@@ -1,13 +1,10 @@
-
-
-
+<!-- <div id="main1">
 <div class="container">
-    <h2>Please Register your SPV
-    </h2>
-    <!-- Trigger the modal with a button -->
+    <h2>Please Register your SPV</h2>
+    <!-- Trigger the modal with a button --
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">REGISTER</button>
   
-    <!-- Modal -->
+    <!-- Modal --
     <div class="modal fade" id="myModal" role="dialog">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
@@ -18,12 +15,36 @@
           <div class="modal-body">
               <input type="text"  [(ngModel)]="spv_ether_value" class="form-control" placeholder="SPV Ethers" /><br>
 
-            <input type="button" class="btn btn-primary" (click)="spv_reg()" data-dismiss="modal" value="SPV Register"/>
+            <input type="button"  data-dismiss="modal" class="btn btn-primary" (click)="spv_reg()" value="SPV Register"/>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div> -->
+<br><br><br>
+  <div class="container" style="border:1px solid #ccc;background:white">
+      <h1>Register The SPV Here...</h1>
+      <p>Please fill in this form to create an account.</p>
+      <hr>
+  
+      <label for="Bank Name"><b>Deposit Amount</b></label>
+      <input type="text"  [(ngModel)]="spv_ether_value" class="form-control" placeholder="Deposit Amount" /><br>
+      <div class="clearfix">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button type="submit" class="btn btn-primary"  (click)="spv_reg()">Register</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <button type="button" class="btn btn-danger" (click)="cancel()">Cancel</button>
+      </div>
+    </div>
+
+<ngx-spinner
+      bdColor="rgba(51,51,51,0.8)"
+      size="medium"
+      color="#fff"
+      loadingText="Loading..."
+      type="ball-scale-multiple">
+</ngx-spinner>
+
+<ngx-spinner></ngx-spinner>
