--- a/src/app/monthlypayment/monthlypayment.component.html
+++ b/src/app/monthlypayment/monthlypayment.component.html
@@ -2,7 +2,7 @@
 <br><br><br>
 <div class="col-sm-12" id="borrrow_hide">
     <div class="container" style="border:3px solid #428bca;background:white;overflow-y:auto;height:450px;">
-              <h3 style="color: #338ecf;text-align:center;">Borrowing Loan Details</h3>
+              <h3 style="color: #338ecf;text-align:center;">Borrower Loan Details</h3>
         <table class="table table-responsive-md">
         <!-- <thead class="mdb-color lighten-4"> -->
                     <tr>
