--- a/src/app/financial/financial.component.html
+++ b/src/app/financial/financial.component.html
@@ -35,15 +35,15 @@
                         <table  class="table table-responsive-md">
                                 <thead>
                                         <tr>
-                                                <th>Loan Id</th>
-                                                <th>Token Address</th>
-                                                <th>token value</th>
-                                                <th>Borrower Address</th>
-                                                <th>Total Amount</th>
-                                                <th>Total Paid Ins.</th>
-                                                <th>Total Months</th>
-                                                <th>Balance Loan</th>
-                                                <th>Balance Installment</th>
+                                                <th><h4 style="color: black;">Loan Id</h4></th>
+                                                <th><h4 style="color: black;">Token Address</h4></th>
+                                                <th><h4 style="color: black;">token value</h4></th>
+                                                <th><h4 style="color: black;">Borrower Address</h4></th>
+                                                <th><h4 style="color: black;">Total Amount</h4></th>
+                                                <th><h4 style="color: black;">Total Paid Ins.</h4></th>
+                                                <th><h4 style="color: black;">Total Months</h4></th>
+                                                <th><h4 style="color: black;">Balance Loan</h4></th>
+                                                <th><h4 style="color: black;">Balance Installment</h4></th>
                                         </tr>
                                 </thead>
                                 <tbody>
