--- a/src/app/totalfi/totalfi.component.html
+++ b/src/app/totalfi/totalfi.component.html
@@ -34,7 +34,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Financial Institute</h4>
+                        <h4 class="modal-title">Loan Request</h4>
                       </div>
                       <div class="modal-body">
                         <form [formGroup]="angForm" novalidate>
@@ -48,12 +48,13 @@
                                 Token Address is required.
                               </div>
                           </div>
-                          
+                          <div class="form-group">
+                            <label>Financial Institution Address</label>
                           <input type="text"  class="form-control" #b value={{_address}} placeholder="Bank Address" readonly/>
-                          
+                          </div>
                           <div class="form-group">
                             <label>Number of Token</label>
-                            <input class="form-control" formControlName="num" type="text" placeholder="Enter the amount in Ether" #c>
+                            <input class="form-control" formControlName="num" type="text" placeholder="Enter the number of Tokens" #c>
                           </div>
   
                           <div *ngIf="angForm.controls['num'].invalid && (angForm.controls['num'].dirty || angForm.controls['num'].touched)" class="alert alert-danger" >
